# 6dof

./: CMakeLists.txt
include/: Logger.h  Types.h
include/actuators/: FirstOrderMotor.h  Motor.h
include/core/: SimFactory.h  State.h
include/dynamics/: QuadDynamics.h
include/interfaces/: IDynamics.h  IMotor.h  ISensor.h  IWorldModel.h
include/sensors/: GPSSensor.h  IMUSensor.h
include/vehicle/: Quadcopter.h
include/world/: FlatEarthModel.h  WGS84Model.h
src/: main.cpp
src/MotorTest/: main.cpp
src/actuators/: FirstOrderMotor.cpp
src/core/: SimFactory.cpp
src/dynamics/: Integrator.h  QuadDynamics.cpp
src/models/: Motor.cpp  Motor.h
src/sensors/: GPSSensor.cpp  IMUSensor.cpp
src/vehicle/: Quadcopter.cpp
src/world/: FlatEarthModel.cpp  WGS84Model.cpp
